--- a/Application/Admin/View/Menu/add.html
+++ b/Application/Admin/View/Menu/add.html
@@ -4,40 +4,47 @@
 </block>
 
 <block name="body">
-    <form class="form-horizontal">
-        <div class="form-group">
-            <label>权限组名</label>
-            <input type="text" name="groupname" placeholder="权限组名" autocomplete="off">
+    <div class="panel panel-info">
+        <div class="panel-heading">
+            <h3 class="panel-title">增加权限组</h3>
         </div>
-        <button class="btn ajax-post confirm" target-url="{:U('add')}" target-form="form-horizontal">增加</button>
-        <button class="btn btn-return" onclick="javascript:history.back(-1);return false;">返 回</button>
-    </form>
+        <div class="panel-body">
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label>权限组名</label>
+                    <input type="text" name="groupname" placeholder="权限组名" autocomplete="off">
+                </div>
+                <button class="btn ajax-post confirm" target-url="{:U('add')}" target-form="form-horizontal">增加</button>
+                <button class="btn btn-return" onclick="javascript:history.back(-1);return false;">返 回</button>
+            </form>
+        </div>
+    </div>
 </block>
 
 <block name="script">
     <script type="text/javascript">
         $(function() {
-			$(document).on('click','.ajax-post',function(){
-				var _this = this;
-				if ( $(_this).hasClass('confirm') ) {
-					if(!confirm('确认要执行该操作吗?')){
-						return false;
-						
-					}
-					$.ajax({
-						type: "post",
-						url: $(_this).attr('target-url'),
-						dataType: "json",
-						data: $('.'+$(_this).attr('target-form')).serialize(),
-						success: function (data) {
-							if(data.status == 1){
-								alert(data.info);
-							}
-						}
-					});
-				}
-				return false;
-			});
+            $(document).on('click', '.ajax-post', function() {
+                var _this = this;
+                if ($(_this).hasClass('confirm')) {
+                    if (!confirm('确认要执行该操作吗?')) {
+                        return false;
+
+                    }
+                    $.ajax({
+                        type: "post",
+                        url: $(_this).attr('target-url'),
+                        dataType: "json",
+                        data: $('.' + $(_this).attr('target-form')).serialize(),
+                        success: function(data) {
+                            if (data.status == 1) {
+                                alert(data.info);
+                            }
+                        }
+                    });
+                }
+                return false;
+            });
         });
     </script>
 </block>
