--- a/Application/Admin/View/Public/base.html
+++ b/Application/Admin/View/Public/base.html
@@ -410,8 +410,10 @@
 
 	<!--common scripts for all pages-->
 	<script src="/Public/AdminEx/js/scripts.js"></script>
-
-	<block name="script"></block>
+	
+	<script type="text/javascript">
+		<block name="script"></block>
+	</script>
 
 </body>
 
