--- a/Application/Admin/View/Public/base.html
+++ b/Application/Admin/View/Public/base.html
@@ -12,8 +12,10 @@
 	<link href="/Public/AdminEx/css/style.css" rel="stylesheet">
 	<link href="/Public/AdminEx/css/style-responsive.css" rel="stylesheet">
 
-	<block name="style"></block>
-
+	<style type="text/css">
+		<block name="style"></block>
+	</style>
+	
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 	<script src="/Public/AdminEx/js/html5shiv.js"></script>
