--- a/Application/Admin/View/Auth/list.html
+++ b/Application/Admin/View/Auth/list.html
@@ -1,10 +1,6 @@
 <extend name="Public/base" />
 
 <block name="css">
-    <!--ios7-->
-    <link rel="stylesheet" type="text/css" href="/Public/AdminEx/js/ios-switch/switchery.css" />
-    <!--icheck-->
-    <link rel="stylesheet" type="text/css" href="/Public/AdminEx/js/iCheck/skins/flat/green.css" />
 </block>
 
 <block name="style">
@@ -26,10 +22,6 @@
        padding-left:0;
     }
 
-    #content li+ul{
-       display:none;
-    }
-
     #content ul:before {
         width: 1px;
         z-index:1;
@@ -49,6 +41,31 @@
         border-top:1px dotted #666;
         z-index:1;
         vertical-align:middle;
+    }
+
+    #masklayerbg { 
+        display: none; 
+        position: fixed; 
+        top: 0%; 
+        left: 0%; 
+        width: 100%; 
+        height: 100%; 
+        background-color: #777; 
+        z-index:1001;
+        -moz-opacity: 0.7; 
+        opacity:.70; 
+        filter: alpha(opacity=70); 
+    }
+
+    #masklayershow { 
+        display: none; 
+        position: fixed; 
+        top: 1%; 
+        left: 22%; 
+        width: 56%; 
+        height: 98%; 
+        z-index:1002; 
+        overflow: auto;
     }
 </block>
 
@@ -80,18 +97,15 @@
 </block>
 
 <block name="js">
-    <!--ios7-->
-    <script src="/Public/AdminEx/js/ios-switch/switchery.js"></script>
-    <script src="/Public/AdminEx/js/ios-switch/ios-init.js"></script>
-    <!--icheck -->
-    <script src="/Public/AdminEx/js/iCheck/jquery.icheck.js"></script>
+    <script src="/Public/Javascript/vertify.js"></script>
 </block>
 
 <block name="script">
 $(function () {
     var fuc = {
         config: {
-            htmlStr: ''
+            htmlStr: '',
+            test: 'test'
         },
         init: function () {
             this.renderTable();
@@ -108,76 +122,120 @@ $(function () {
                         that.config.htmlStr += '<a class="btn btn-link pull-right">' + (parseInt(data[i]['status']) ? '禁用' : '启用') + '</a>';
                         that.config.htmlStr += '<a class="btn btn-link pull-right">访问授权</a>';
                     } else {
-                        that.config.htmlStr += '<li class="clearfix"><a class="btn switchClick" href="javascript:;"><i class="fa fa-folder"></i>&nbsp;' + data[i]['name'] + '</a>';
-                        
-                        that.config.htmlStr += '<a class="btn btn-link pull-right addClick">增加</a>';
+                        that.config.htmlStr += '<li class="clearfix"><a href="javascript:;" class="btn switchClick"><i class="fa fa-folder"></i>&nbsp;' + data[i]['name'] + '</a>';
+                        that.config.htmlStr += '<a href="javascript:;" class="btn btn-link pull-right addClick">增加</a>';
                     }
-
                     if (parseInt(data[i]['pid'])) {
-                        that.config.htmlStr += '<a class="btn btn-link pull-right deleteClick">删除</a>';
-                        that.config.htmlStr += '<a class="btn btn-link pull-right editClick">编辑</a>';
+                        that.config.htmlStr += '<a href="javascript:;" class="btn btn-link pull-right deleteClick">删除</a>';
+                        that.config.htmlStr += '<a href="javascript:;" class="btn btn-link pull-right editClick">编辑</a>';
                     }
-
                     that.config.htmlStr += '<input type="hidden" name="id" value="' + parseInt(data[i]['id']) + '">';
                     that.config.htmlStr += '</li>';
-
-                    if (data[i]['list']) {
-                        that.handleData(data[i]['list']);
-                    }else{
-                        that.config.htmlStr += '<ul><li>还没有内容，快去添加吧</li></ul>';
+                    if(data[i]['is_last']==0){
+                        if (data[i]['list']) {
+                            that.handleData(data[i]['list']);
+                        } else {
+                            that.config.htmlStr += '<ul><li>还没有内容，快去添加吧</li></ul>';
+                        }
                     }
                 }
                 that.config.htmlStr += '</ul>';
                 return that.config.htmlStr;
             }
         },
+        addClick: function (e) {
+            var that = this;
+            var html = '<div class="panel panel-info"><div class="panel-heading"><h3 class="panel-title">增加权限组</h3></div><div class="panel-body"><form class="form-horizontal" id="addForm">';
+            html += '<div class="form-group"><label class="col-lg-2 col-sm-2 control-label">分组</label><div class="col-lg-10">';
+            html += '<input type="text" class="form-control" placeholder="' + $(e).parent().find('.switchClick').text() + '" readonly>';
+            html += '</div></div>';
+            html += '<div class="form-group"><label class="col-lg-2 col-sm-2 control-label">名称</label><div class="col-lg-10">';
+            html += '<input type="text" name="name" vertify="string_1_20" class="form-control" placeholder="20字符以内">';
+            html += '</div></div>';
+            html += '<div class="form-group"><label class="col-sm-2 control-label">描述</label><div class="col-sm-10">';
+            html += '<textarea rows="6" class="form-control" name="description" vertify="string_0_500" placeholder="500字符以内"></textarea>';
+            html += '</div></div>';
+            html += '<div class="form-group"><label class="col-sm-2 control-label col-lg-2">类别</label><div class="col-lg-10">';
+            html += '<label class="checkbox-inline"><input type="radio" name="last" value="1" checked="checked"> 权限组</label>';
+            html += '<label class="checkbox-inline"><input type="radio" name="last" value="0"> 权限组分类</label>';
+            html += '</div></div>';
+            html += '<div class="form-group">';
+            html += '<input type="hidden" class="form-control" name="pid" value="' + $(e).parent().find('[name=id]').val() + '" >';
+            html += '</div>';
+            html += '<div class="form-group"><div class="col-lg-offset-2 col-lg-1">';
+            html += '<a href="javascript:;" class="btn btn-success saveClick" data="addForm">保存</a>';
+            html += '</div><div class="col-lg-1">';
+            html += '<a href="javascript:;" class="btn btn-primary cancleClick">取消</a>';
+            html += '</div></div>';
+            html += '</form></div></div>';
+            
+            that.showMask(html);
+            Vertify('addForm', 0);
+        },
+        saveClick:function(e){
+            var that = this;
+            $(e).attr('disabled',true);
+            if(!Vertify($(e).attr("data"), 1)){
+                $(e).attr('disabled',false);
+                return;
+            }
+
+            $.ajax({
+                type:'post',
+                data:$('#'+$(e).attr('data')).serialize(),
+                url:"{:U('addInfo')}",
+                success:function(data){
+                    $(e).attr('disabled',false);
+                    alert(data.info);
+                    that.hideMask(this);
+                    that.renderTable();
+                }
+            });
+        },
+        hideMask: function(e){
+            $('#masklayershow').hide().empty();
+            $('#masklayerbg').hide().empty();
+        },
+        showMask: function(html){
+            $('#masklayerbg').empty().show();
+            $('#masklayershow').empty().append(html).show();
+        },
         bindEvent: function () {
             var that = this;
-
             $(document).on('click', '.a_checkbox', function () {
                 $(this).find('[type=checkbox]').prop('checked', !$(this).find('[type=checkbox]').prop('checked'));
             });
-
             $(document).on('click', '.switchClick', function () {
-                if($(this).parent().next('ul')[0]){
-                    if($(this).parent().next('ul').is(":hidden")){
-                        $(this).parent().next('ul').show().siblings('ul').hide();
-                    }else{
-                        $(this).parent().next('ul').hide();
-                    }
-                }else{
-                    $(this).parent().siblings('ul').hide();
+                if ($(this).parent().next('ul').is(":hidden")) {
+                    $(this).parent().next('ul').show();
+                } else {
+                    $(this).parent().next('ul').hide();
                 }
-                $(this).parent().siblings('ul').find('[type=checkbox]').prop('checked', false);
             });
-
             $(document).on('click', '.fullClick', function () {
                 $("#content").find('[type=checkbox]').prop('checked', true);
                 $("#content").find('ul').show();
             });
-
             $(document).on('click', '.nofullClick', function () {
                 $("#content").find('[type=checkbox]').prop('checked', false);
-                $("#content").find('ul').eq(0).find('ul').hide();
             });
-
             $(document).on('click', '.deleteClick', function () {
                 alert($(this).parent().find('[name=id]').val());
             });
-
             $(document).on('click', '.addClick', function () {
-                $('#masklayerbg').empty().show();
-                $('#masklayershow').empty().show();
+                that.addClick(this);
             });
-
+            $(document).on('click', '.editClick', function () {
+                
+            });
+            $(document).on('click', '.saveClick', function () {
+                that.saveClick(this);
+            });
             $(document).on('click', '.cancleClick', function () {
-                $('#masklayershow').empty().hide();
-                $('#masklayerbg').empty().hide();
+                that.hideMask(this);
             });
-
             $(document).on('click', '#masklayerbg', function () {
-                $('#masklayershow').empty().hide();
-                $('#masklayerbg').empty().hide();
+                that.hideMask(this);
             });
         },
         renderTable: function () {
@@ -187,13 +245,14 @@ $(function () {
                 url: "{:U('getAllInfo')}",
                 success: function (data) {
                     if (data.info.length) {
+                        that.config.htmlStr = '';
                         var html = that.handleData(data.info);
-                        html += '<div id="masklayerbg" style="display: none; position: fixed; top: 0%;  left: 0%; width: 100%; height: 100%; background-color: #777; z-index:1001; -moz-opacity: 0.7; opacity:.70; filter: alpha(opacity=70);"></div>';
-                        html += '<div id="masklayershow" style="display: none; position: fixed; top: 1%; left: 22%; width: 56%; height: 98%; z-index:1002; background-color: #fff; overflow: auto;"></div>';
+                        html += '<div id="masklayerbg"></div>';
+                        html += '<div id="masklayershow"></div>';
                         $('#content').empty().append(html);
                     }
                 }
-            })
+            });
         }
     }
 
