--- a/Application/Admin/View/Menu/list.html
+++ b/Application/Admin/View/Menu/list.html
@@ -4,41 +4,6 @@
 
 <block name="style">
     <style type="text/css">
-        #content ul {
-            list-style: none;
-            position: relative;
-            padding-left: 40px;
-        }
-        
-        #content li:hover {
-            background: #eff0f4;
-        }
-        
-        #content ul a {
-            padding-left: 0;
-        }
-        
-        #content ul:before {
-            width: 1px;
-            z-index: 1;
-            display: block;
-            content: "";
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            border-left: 1px dotted #666;
-        }
-        
-        #content li:before {
-            display: inline-block;
-            content: "";
-            width: 30px;
-            height: 0;
-            border-top: 1px dotted #666;
-            z-index: 1;
-            vertical-align: middle;
-        }
-        
         #masklayerbg {
             display: none;
             position: fixed;
@@ -71,10 +36,41 @@
         <div class="col-md-12">
             <section class="panel">
                 <header class="panel-heading">
-                    <a class="btn btn-link fullClick">全选</a> |
-                    <a class="btn btn-link nofullClick">取消全选</a>
+                    <a href="javascript:;" class="btn btn-link">全选</a>
+                    <a href="javascript:;" class="btn btn-link">取消全选</a>
                 </header>
-                <div class="panel-body" id="content"></div>
+                <div class="panel-body">
+                    <table class="table table-bordered text-center">
+                        <tr>
+                            <td><input type="checkbox" name="fullClick"></td>
+                            <td>ID</td>
+                            <td>名称</td>
+                            <td>链接</td>
+                            <td>描述</td>
+                            <td>排序</td>
+                            <td>隐藏</td>
+                        </tr>
+                        <notempty name="data">
+                            <volist name="data" id="info">
+                                <tr>
+                                    <td><input type="checkbox" name="id" value="{$info.id}"></td>
+                                    <td>{$info.id}</td>
+                                    <td>
+                                        <if condition="$info.is_last eq 0"><a href="{:U('index', array('pid' => $info['id']))}">{$info.name}</a>
+                                            <else />{$info.name}</if>
+                                    </td>
+                                    <td>{$info.url}</td>
+                                    <td>{$info.description}</td>
+                                    <td>{$info.sort}</td>
+                                    <td>
+                                        <if condition="$info.is_hide eq 1">是
+                                            <else />否</if>
+                                    </td>
+                                </tr>
+                            </volist>
+                        </notempty>
+                    </table>
+                </div>
             </section>
         </div>
     </div>
@@ -88,7 +84,7 @@
 <block name="script">
     <script type="text/javascript">
         $(function () {
-            fuc.init();
+            //fuc.init();
         });
     </script>
 </block>
